background image and header

--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
     
            
     <section class="backgroundImage1">
-    <div class="flexContainer">
-        <section class="localFont2">
-            <p>RED PLANET <br>
+        <div class="flexContainer">
+            <section class="localFont2">
+                <p>RED PLANET <br>
                 VENTURES</p>
+            </section>
+            <section class="subheading">
+                <p>EXPLORE THE SOLAR SYSTEM</p>
             </section>
         </div>
     </section>
-  <
+
     <section>
     </section>
 
