contact page start

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,16 +44,47 @@
 
     <!--<header>-->
     <section>
-        <div class="backgroundImage1">
+        <div class="backgroundImage3">
             <div class="flexContainer">
-                <section class="localFont2">
-                    <p>RED PLANET <br>
-                    VENTURES</p><br>
-                </section>
-                
             </div>
-            <section class="subheading">
-                <p>EXPLORE THE SOLAR SYSTEM</p>
+            <section class="contactHead">
+                <p>CONTACT <br>US</p>
             </section>
+        </div>
+    </section>
+
+    <section class="backgroundImage2">
+        <div class="flexContainer1">
+            <div class="flexItem4">
+                    <p class="smallHeading">ABOUT</p>
+                    <p class="Heading1">RED PLANET VENTURES</p>
+                    <p class="graph1">
+                        Welcome to Red Planet Ventures, where we are dedicated to turning dreams of interplanetary exploration into exhilarating realities. As a premier provider of space tourism experiences, we specialize in crafting meticulously curated journeys to the diverse planets within our solar system. From the rugged terrain of Mars to the majestic rings of Saturn, our expertly designed trips offer unparalleled opportunities for discovery and adventure. With a commitment to safety, innovation, and customer satisfaction, we strive to exceed expectations and leave a lasting impression on every traveler who embarks on a voyage with us. Join us as we push the boundaries of exploration and unlock the mysteries of the cosmos with Red Planet Ventures.</p>
+            </div>
+            <div class="flexItem4">
+                <img src="../assets/Images/contactImage.png">
+            </div>
+            
+        </div>
+    </section>
+
+    <section class="backgroundImage2">
+            <div class="flexItem5">
+                <p class="smallHeading">CONTACT US THROUGH OUR</p>
+                <p class="Heading1">SOCIAL MEDIA PAGES</p>
+                <div class="flexContainer2">
+                <div class="flexItem6">
+                    <img src="../assets/Images/smFacebook.png">
+                </div>
+                <div class="flexItem6">
+                    <img src="../assets/Images/smInstagram.png">
+                </div>
+                <div class="flexItem6">
+                    <img src="../assets/Images/smTicktock.png">
+                </div>
+                <div class="flexItem6">
+                    <img src="../assets/Images/smX.png">
+                </div>
+            </div>
         </div>
     </section>
