--- a/pages/flights.html
+++ b/pages/flights.html
@@ -22,38 +22,248 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <nav>
-        <div class="backgroundImage1">
+    <header class="backgroundImage4">
+        <nav>
             <div class="topNav">
                 <a href="../index.html">
                     <img src="../assets/Images/logo.png" width="266px">
                 </a>
 
-             <div class="topNavRight">
-                <input type="text" placeholder="Search" class="searchBar">
-                <ul class="nav">
-                 <li><a href="../index.html">Home</a></li>
-                 <li><a href="../pages/contact.html">Contact</a></li>
-                 <li><a class="active" href="pages/flights.html">Flights</a></li>
-                </ul>
+                    <div class="topNavRight">
+                        <div class="searchContainer">
+                            <img class="searchIcon" src="../assets/Images/search.svg">
+                                <input type="text" placeholder="Search" class="searchBar">
+                                <img class="searchIcon1" src="../assets/Images/basket.svg">
+                            <div class="indiContainer">
+                                <div class="indiIcon">2</div>
+                            </div>
+                        </div>
+                        <ul class="nav">
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../pages/contact.html">Contact</a></li>
+                            <li><a class="active" href="pages/flights.html">Flights</a></li>
+                        </ul>
 
-             </div>
+                    </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+        <section>
+            <div class="backgroundImage4">
+                <div class="flexContainer">
+                </div>
+                    <section class="contactHead">
+                        <p>BOOK A FLIGHT</p>
+                    </section>
+            </div>
+        </section>    
+    </header>
 
     <!--<header>-->
-    <section>
-        <div class="backgroundImage1">
-            <div class="flexContainer">
-                <section class="localFont2">
-                    <p>RED PLANET <br>
-                    VENTURES</p><br>
-                </section>
-                
+
+    <section class="backgroundImage2">
+        <div class="flexContainer1">
+            <div class="flexFlight1">
+                <img src="../assets/Images/flighhtMars.png">
             </div>
-            <section class="subheading">
-                <p>EXPLORE THE SOLAR SYSTEM</p>
-            </section>
+                <div class="flexFlight1">
+                    <p class="Heading1">The Classic Mars Experience</p>
+                    <div class="info">
+                    <p>R25,000.00            <s>R50,000.00</s></p>
+                </div>
+                    <p class="graph1">
+                        Embark on a Jupiter voyage aboard the "Jupiter Odyssey." Witness its majestic storms and swirling atmosphere. Dive into metallic hydrogen oceans. Explore its moons, each a world unto itself. Engage in gravity surfing, comet chasing, and space excursions. Experience cosmic wonder in luxury, blending exploration with adventure.
+                    </p>
+                    <button name="Book" type="submit" id="bookButton">Book Now</button>
+                    <hr class="purple">
+                    <div class="info">
+                        <p>SKU : SS001</p>
+                        <p>Shuttle : The Opulence</p>
+                        <p>Tags : Mars, Luxury, Sale</p>
+                        <p>Date : 16 June - 19 July</p>
+                    </div>
+                </div>
         </div>
     </section>
+
+    <section class="backgroundImage">
+        <div class="flexContainer1">
+            <div class="flexFlight1">
+                <img src="../assets/Images/flightNeptune.png">
+            </div>
+                <div class="flexFlight1">
+                    <p class="Heading2">Neptune's Cosmic Dive</p>
+                    <div class="info">
+                        <p>R45,000.00</p>
+                    </div>
+                    <p class="graphP">
+                        Embark on a voyage to Neptune aboard the "Neptune Voyager." Witness surreal vistas of swirling clouds and rings. Experience weightlessness and explore frigid oceans. Engage in thrilling spacewalks, observe celestial phenomena, and savor gourmet space cuisine. An unforgettable adventure awaits, blending luxury with cosmic exploration.
+                    </p>
+                    <button name="Book" type="submit" id="bookButton">Book Now</button>
+                    <hr class="white">
+                    <div class="info">
+                        <p>SKU : SS405</p>
+                        <p>Shuttle : The Voyager</p>
+                        <p>Tags : Neptune, Commercial, Gourmet Experience</p>
+                        <p>Date : 4 April - 28 March</p>
+                    </div>
+                </div>
+        </div>
+    </section>
+    
+    <section class="backgroundImage2">
+        <div class="flexContainer1">
+            <div class="flexFlight1">
+                <img src="../assets/Images/flightJupiter.png">
+            </div>
+                <div class="flexFlight1">
+                    <p class="Heading1">The Giant's Journey</p>
+                    <div class="info">
+                        <p>R65,000.00</p>
+                    </div>
+                    <p class="graph1">
+                        Embark on a Jupiter voyage aboard the "Jupiter Odyssey." Witness its majestic storms and swirling atmosphere. Dive into metallic hydrogen oceans. Explore its moons, each a world unto itself. Engage in gravity surfing, comet chasing, and space excursions. Experience cosmic wonder in luxury, blending exploration with adventure.
+                    </p>
+                    <button name="Book" type="submit" id="bookButton">Book Now</button>
+                    <hr class="purple">
+                    <div class="info">
+                        <p>SKU : SS606</p>
+                        <p>Shuttle : The Odyssey</p>
+                        <p>Tags : Jupiter, Luxury, Adventure</p>
+                        <p>Date : 15 June - 30 July</p>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <section class="backgroundImage">
+        <div class="flexContainer1">
+            <div class="flexFlight1">
+                <img src="../assets/Images/flightSaturn.png">
+            </div>
+                <div class="flexFlight1">
+                    <p class="Heading2">Ring Around a Saturn</p>
+                    <div class="info">
+                        <p>R40,000.00</p>
+                    </div>
+                    <p class="graphP">
+                        Embark on a thrilling voyage to Saturn aboard the "Saturn Explorer." Marvel at its iconic rings and turbulent storms. Explore its diverse moons, from icy Enceladus to mysterious Titan, with activities including rover expeditions and cave exploration. Experience the wonders of the cosmos amidst luxurious accommodations, where the thrill of discovery intertwines seamlessly with the excitement of adventure.
+                    </p>
+                    <button name="Book" type="submit" id="bookButton">Book Now</button>
+                    <hr class="white">
+                    <div class="info">
+                        <p>SKU : SS333</p>
+                        <p>Shuttle : The Explorer</p>
+                        <p>Tags : Saturn, Luxury, Adventure</p>
+                        <p>Date : 4 April - 28 March</p>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <section class="backgroundImage2">
+        <div class="flexContainer1">
+            <div class="flexFlight1">
+                <img src="../assets/Images/flightUranus.png">
+            </div>
+                <div class="flexFlight1">
+                    <p class="Heading1">Uranus Uncharted</p>
+                    <div class="info">
+                        <p>R50,000.00</p>
+                    </div>
+                    <p class="graph1">
+                        Embark on a cosmic adventure to Uranus with our "Uranus Unveiled" tour. Explore its icy atmosphere and captivating moons. Experience thrilling zero-gravity excursions, witness mesmerizing auroras, and immerse yourself in celestial photography workshops. With luxury accommodations and expert guides, discover the wonders of Uranus in a journey of a lifetime.
+                    </p>
+                    <button name="Book" type="submit" id="bookButton">Book Now</button>
+                    <div class="info">
+                    <hr class="purple">
+                        <p>SKU : SS735</p>
+                        <p>Shuttle : The Endeavor</p>
+                        <p>Tags : Uranus, Workshop, Adventure</p>
+                        <p>Date : 16 May - 19 July</p>
+                    </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="backgroundImage">
+        <div class="flexContainer1">
+            <div class="flexFlight1">
+                <img src="../assets/Images/flightMoon.png">
+            </div>
+                <div class="flexFlight1">
+                    <p class="Heading2">Moonlight Meander</p>
+                    <div class="info">
+                        <p>R15,000.00</p>
+                    </div>
+                    <p class="graphP">
+                        Experience the ultimate lunar getaway with our "Moonlight Meander" package. Depart Earth's atmosphere aboard the "Celestial Cruiser" for a short but unforgettable journey to the Moon. Enjoy lunar walks, breathtaking views of Earthrise, and stargazing under the moon's serene glow. Immerse yourself in luxury accommodations amidst the tranquility of space.
+                    </p>
+                    <button name="Book" type="submit" id="bookButton">Book Now</button>
+                    <hr class="white">
+                    <div class="info">
+                        <p>SKU : SS451</p>
+                        <p>Shuttle : The Voyager</p>
+                        <p>Tags : Moon, Commercial, Romantic</p>
+                        <p>Date : 5 August - 12 August</p>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <footer>
+        <section class="backgroundImage2">
+            <div class="flex-container">
+   
+                <div class="item1">
+                    <img src="../assets/Images/logo.png">
+                    <br>
+                    <p class="graph">Offering unforgettable trips to<br> explore planets in our solar<br> system.</p>
+                </div>
+                <div class="item2">
+                    <p class="footergraph">Company</p> <br>
+                    <p class="graph">
+                        <a href="../index.html">Home</a>
+                       </p>
+                           <br>
+                       <p class="graph">
+                         <a href="../pages/flights.html">Flights</a>
+                       </p>
+                           <br>
+                       <p class="graph">
+                         <a href="../pages/contact.html">Contact Us</a> 
+                       </p>
+                </div>
+                <div class="item3">
+                    <p class="footergraph">Social Media Links</p>
+                        <br>
+                    <div class="item3-1">
+                        <div class="footerSocial">
+                            <img src="../assets/Images/smFacebook.png">
+                        </div>
+                        <div class="footerSocial">
+                            <img src="../assets/Images/smInstagram.png">
+                        </div>
+                        <div class="footerSocial">
+                            <img src="../assets/Images/smTicktock.png">
+                        </div>
+                        <div class="footerSocial">
+                            <img src="../assets/Images/smX.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <hr>
+                <div class="footer">
+                    <div class="footer1">
+                        <p class="footerT">All Rights Reserved @ Open Window 2024</p>
+                    </div>
+                    <div class="footer2">
+                        <p class="footerT">Terms & Conditions</p>
+                        <p class="footerT">Privacy Policy</p>
+                    </div>
+                </div>
+        </section>
+    </footer>
+
+</body>
+</html>
