--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html><!--type of html-->
-<html lang="en"><!--html starts here-->
-<head><!--admin section-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-    <meta charset="UTF-8"><!--character set / types of characters-->
-    <meta http-equiv="X-UX-Compatible" content="IE-edge"><!--types of browser it is compatible with-->
-    <meta name="viewport" content="width-device-width, initial-scale-1.0"><!--website as wide as browser-->
-    <meta name="keyword" content="HTML, CSS, Template, Bootstrap"> <!--search words for users-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UX-Compatible" content="IE-edge">
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <meta name="keyword" content="HTML, CSS, Template, Bootstrap">
     <meta name="author" content="Anke Heine 241169">
 
     <title>Red Planet Ventures</title>
-
-    <!--link bootstrap
-        link javascript
-        link Google Font files
-        link CSS-->
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -181,7 +176,9 @@
                     </div>
                 </div>
             </div>
-                <hr>
+                <div class="footerHr">
+                    <hr>
+                </div>
                 <div class="footer">
                     <div class="footer1">
                         <p class="footerT">All Rights Reserved @ Open Window 2024</p>
