--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             <div class="backgroundImage1">
                         <p class="localFont2">RED PLANET <br>
                         VENTURES</p>
-
                     <p class="subheading">EXPLORE THE SOLAR SYSTEM</p>
             </div>
         </section>
@@ -160,16 +159,24 @@
                         <br>
                     <div class="item3-1">
                         <div class="footerSocial">
-                            <img src="assets/Images/smFacebook.png">
+                            <a href="https://www.facebook.com/theopenwindow/">
+                                <img src="assets/Images/smFacebook.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="assets/Images/smInstagram.png">
+                            <a href="https://www.instagram.com/openwindowinstitute/?hl=en">
+                                <img src="assets/Images/smInstagram.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="assets/Images/smTicktock.png">
+                            <a href="https://www.tiktok.com/@open_window_">
+                                <img src="assets/Images/smTicktock.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="assets/Images/smX.png">
+                            <a href="https://x.com/open_window_?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                                <img src="assets/Images/smX.png">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -182,13 +189,13 @@
                         <p class="footerT">All Rights Reserved @ Open Window 2024</p>
                     </div>
                     <div class="footer2">
-                        <p class="footerT">Terms & Conditions</p>
+                        <p class="footerT">Terms & Conditions</p> 
                         <p class="footerT">Privacy Policy</p>
                     </div>
                 </div>
         </section>
     </footer>
-
+<script src="js/scripts.js"></script>
 </body>
 </html>
 
