--- a/pages/contact.html
+++ b/pages/contact.html
@@ -123,7 +123,7 @@
                                         <textarea placeholder="Hi! i'd like to ask about" tabindex="4" required></textarea>
                                     </fieldset>
                                     <fieldset>
-                                        <button name="Submit" type="submit" id="submitContactForm">Submit</button>
+                                        <button name="Submit" type="submit" id="submitContactForm" onclick="myFunction()" value="Show Name">Submit</button>
                                     </fieldset>
                             </form>
                         </div>
@@ -162,16 +162,24 @@
                         <br>
                     <div class="item3-1">
                         <div class="footerSocial">
-                            <img src="../assets/Images/smFacebook.png">
+                            <a href="https://www.facebook.com/theopenwindow/">
+                                <img src="../assets/Images/smFacebook.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="../assets/Images/smInstagram.png">
+                            <a href="https://www.instagram.com/openwindowinstitute/?hl=en">
+                                <img src="../assets/Images/smInstagram.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="../assets/Images/smTicktock.png">
+                            <a href="https://www.tiktok.com/@open_window_">
+                                <img src="../assets/Images/smTicktock.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="../assets/Images/smX.png">
+                            <a href="https://x.com/open_window_?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                                <img src="../assets/Images/smX.png">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -190,6 +198,8 @@
                 </div>
         </section>
     </footer>
+
+    <script src="../js/scripts.js"></script>
 
 </body>
 </html>
