--- a/pages/flights.html
+++ b/pages/flights.html
@@ -233,16 +233,24 @@
                         <br>
                     <div class="item3-1">
                         <div class="footerSocial">
-                            <img src="../assets/Images/smFacebook.png">
+                            <a href="https://www.facebook.com/theopenwindow/">
+                                <img src="../assets/Images/smFacebook.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="../assets/Images/smInstagram.png">
+                            <a href="https://www.instagram.com/openwindowinstitute/?hl=en">
+                                <img src="../assets/Images/smInstagram.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="../assets/Images/smTicktock.png">
+                            <a href="https://www.tiktok.com/@open_window_">
+                                <img src="../assets/Images/smTicktock.png">
+                            </a>
                         </div>
                         <div class="footerSocial">
-                            <img src="../assets/Images/smX.png">
+                            <a href="https://x.com/open_window_?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                                <img src="../assets/Images/smX.png">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -262,5 +270,6 @@
         </section>
     </footer>
 
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
