--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
 <head>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UX-Compatible" content="IE-edge">
-    <meta name="viewport" content="width-device-width, initial-scale-1.0">
-    <meta name="keyword" content="HTML, CSS, Template, Bootstrap">
+    <meta charset="UTF-8"><!--character set / types of characters-->
+    <meta http-equiv="X-UX-Compatible" content="IE-edge"><!--types of browser it is compatible with-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--website as wide as browser-->
+    <meta name="keyword" content="HTML, CSS, Template, Bootstrap"> <!--search words for users-->
     <meta name="author" content="Anke Heine 241169">
 
     <title>Red Planet Ventures</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="js/scripts.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -29,13 +33,14 @@
                         <div class="searchContainer">
                             <img class="searchIcon" src="assets/Images/search.svg">
                                 <input type="text" placeholder="Search" class="searchBar">
-                                <img class="searchIcon1" src="assets/Images/basket.svg">
+                                <a href="pages/cartmodal.html"><img class="searchIcon1" src="assets/Images/basket.svg"></a>
                             <div class="indiContainer">
                                 <div class="indiIcon">2</div>
                             </div>
                         </div>
                         <ul class="nav">
                             <li><a class="active" href="index.html">Home</a></li>
+                            <li><a href="pages/about.html">About</a></li>
                             <li><a href="pages/contact.html">Contact</a></li>
                             <li><a href="pages/flights.html">Flights</a></li>
                         </ul>
@@ -59,19 +64,48 @@
 <section class="backgroundImage"> 
     <div class="flexContainer1" >
         <div class="flexItem1">
-            <img src="assets/Images/marsSliderClipped1.png">
-        </div>
-
-    <div class="flexItem1">
-        <p class="smallHeading">FEATURED TRIP</p>
-        <p class="bigHeading">THE CLASSIC MARS EXPERIENCE</p>
-        <p class="graph">Embark on a Mars vacation: red deserts, ancient relics, and towering canyons await. Enjoy low-gravity hiking, rover trips to Olympus Mons, and stargazing under Phobos and Deimos. Unforgettable adventures beckon on the rust-colored landscapes of the Red Planet.</p>
-            <div class="bookB">
-                <button name="Book" type="submit" id="bookButton">Book Now</button>
+            <div class="row">
+                <div class="col-6">
+                    <div id="carouselExample" class="carousel slide">
+                       <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/Images/marsSliderClipped1.png" class="d-block w-100 h-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/Images/marsSliderClipped2.png" class="d-block w-100 h-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/Images/marsSliderClipped3.png" class="d-block w-100 h-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/Images/marsSliderClipped14.png" class="d-block w-100 h-100" alt="">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                                    data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                           <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                                    data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column justify-content-center ms-5">
+                    <p class="smallHeading">FEATURED TRIP</p>
+                    <p class="bigHeading">THE CLASSIC MARS EXPERIENCE</p>
+                    <p class="graph">Embark on a Mars vacation: red deserts, ancient relics, and towering canyons await. Enjoy low-gravity hiking, rover trips to Olympus Mons, and stargazing under Phobos and Deimos. Unforgettable adventures beckon on the rust-colored landscapes of the Red Planet.</p>
+                    <br>
+                    <div class="bookB">
+                        <button name="Book" type="submit" class="btn_main" id="bookButton">Book Now </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</section>  
+</section>
 
 
     <section class="backgroundImage2">
@@ -138,20 +172,24 @@
                 <div class="item1">
                     <img src="assets/Images/logo.png">
                     <br>
-                    <p class="graph">Offering unforgettable trips to<br> explore planets in our solar<br> system.</p>
+                    <p class="slogan">Offering unforgettable trips to<br> explore planets in our solar<br> system.</p>
                 </div>
                 <div class="item2">
                     <p class="footergraph">Company</p> <br>
                         <p class="graph">
-                         <a href="index.html">  Home </a> 
+                         <a href="index.html">Home</a> 
                         </p>
-                            <br>
+                        <br>
                         <p class="graph">
-                         <a href="pages/flights.html">  Flights </a> 
-                        </p>
-                            <br>
+                            <a href="pages/about.html">About Us</a> 
+                           </p>
+                           <br>
+                           <p class="graph">
+                             <a href="pages/contact.html">Contact Us</a> 
+                           </p>
+                           <br>
                         <p class="graph">
-                          <a href="pages/contact.html"> Contact Us</a> 
+                         <a href="pages/flights.html">Flights</a> 
                         </p>
                 </div>
                 <div class="item3">
@@ -181,6 +219,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div class="footerHr">
                 <hr>
             </div>
@@ -195,6 +234,9 @@
                 </div>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
